--- a/findly-builder/src/app/components/scheduler/scheduler.component.scss
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.scss
@@ -1007,6 +1007,13 @@
                 border-radius: 50%;
                 background: #E4E5E7;
             }
+            .custom-repeat-on{
+                margin-top: 85px;
+                /* border: 1px solid white; */
+                background: white;
+                padding: 8px;
+                border-radius: 5px;
+            }
             .active{
                 background: #0D6EFD;
                 color: #E4E5E7;
